--- a/.github/workflows/deploy-stacks.yml
+++ b/.github/workflows/deploy-stacks.yml
@@ -223,11 +223,7 @@ jobs:
                         key = key.strip()
                         value = value.strip()
                         
-                        # Remove surrounding quotes if present
-                        if (value.startswith('"') and value.endswith('"')) or \
-                           (value.startswith("'") and value.endswith("'")):
-                            value = value[1:-1]
-                        
+                        # Store the value with its original quotes
                         env_vars[key] = value
             return env_vars
 
@@ -366,6 +362,8 @@ jobs:
       if: steps.check-files.outputs.terraform-exists == 'true'
       run: |
         SERVICE="${{ matrix.service }}"
+        # Refresh state before planning
+        terraform refresh
         terraform plan -target="portainer_stack.${SERVICE}_stack" -out="tfplan-${SERVICE}"
       working-directory: ./portainer/terraform
       env:
@@ -375,6 +373,8 @@ jobs:
       if: steps.check-files.outputs.terraform-exists == 'true' && github.ref == 'refs/heads/main'
       run: |
         SERVICE="${{ matrix.service }}"
+        # Refresh state before applying
+        terraform refresh
         terraform apply -auto-approve "tfplan-${SERVICE}"
       working-directory: ./portainer/terraform
       env:
