--- a/.github/workflows/deploy-stacks.yml
+++ b/.github/workflows/deploy-stacks.yml
@@ -141,7 +141,11 @@ jobs:
                         key = key.strip()
                         value = value.strip()
                         
-                        # Store the value with its original quotes
+                        # Remove surrounding quotes if present
+                        if (value.startswith('"') and value.endswith('"')) or \
+                           (value.startswith("'") and value.endswith("'")):
+                            value = value[1:-1]
+                        
                         env_vars[key] = value
             return env_vars
 
@@ -184,8 +188,6 @@ jobs:
                         if ' ' in value or ':' in value or '#' in value or value.startswith('{') or value.startswith('['):
                             replacement = f'"{value}"'
                         else:
-                            # Remove any existing quotes from the value
-                            value = value.strip('"\'')
                             replacement = value
                     
                     # Replace the variable
@@ -402,7 +404,11 @@ jobs:
                         key = key.strip()
                         value = value.strip()
                         
-                        # Store the value with its original quotes
+                        # Remove surrounding quotes if present
+                        if (value.startswith('"') and value.endswith('"')) or \
+                           (value.startswith("'") and value.endswith("'")):
+                            value = value[1:-1]
+                        
                         env_vars[key] = value
             return env_vars
 
@@ -445,8 +451,6 @@ jobs:
                         if ' ' in value or ':' in value or '#' in value or value.startswith('{') or value.startswith('['):
                             replacement = f'"{value}"'
                         else:
-                            # Remove any existing quotes from the value
-                            value = value.strip('"\'')
                             replacement = value
                     
                     # Replace the variable
