--- a/portainer/terraform/compose/cloudflared_lis_isp.yml
+++ b/portainer/terraform/compose/cloudflared_lis_isp.yml
@@ -3,7 +3,7 @@ services:
   cloudflared_lis_isp:
     image: cloudflare/cloudflared:2025.5.0
     container_name: cloudflared_lis_isp1
-    restart: always
+    restart: unless-stopped
     environment:
       TUNNEL_TOKEN: ${TUNNEL_TOKEN}
     command: tunnel run
