--- a/portainer/terraform/compose/cloudflared_lis_isp.yml
+++ b/portainer/terraform/compose/cloudflared_lis_isp.yml
@@ -8,8 +8,16 @@ services:
       TUNNEL_TOKEN: ${TUNNEL_TOKEN}
     command: tunnel run
     networks:
-      - vlan1
-
+      vlan1:
+          ipv4_address: "192.168.1.65"
 networks:
   vlan1:
-    external: true
+    driver: macvlan
+    driver_opts:
+      parent: eth0.1
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.1.0/24
+          ip_range: 192.168.1.64/27
+          gateway: 192.168.1.254
