--- a/portainer/terraform/compose/vaultwarden.yml
+++ b/portainer/terraform/compose/vaultwarden.yml
@@ -1,7 +1,7 @@
 
 services:
   vaultwarden:
-    image: vaultwarden/server:1.34.1-alpine
+    image: vaultwarden/server:latest
     container_name: vaultwarden
     restart: unless-stopped
     environment:
