--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["config:recommended", "schedule:nonOfficeHours"],
+  "extends": ["config:recommended"],
 
   "ignorePaths": [
     ".github/workflows/*"
