--- a/portainer/terraform/compose/docker-compose.yml
+++ b/portainer/terraform/compose/docker-compose.yml
@@ -1,4 +1,32 @@
-version: '3'
+
 services:
-  hello:
-    image: nginx:1.27
+  vaultwarden:
+    image: vaultwarden/server:1.34.1-alpine
+    container_name: vaultwarden
+    restart: unless-stopped
+    environment:
+      TZ: "Europe/Lisbon"
+      ADMIN_TOKEN: ${ADMIN_TOKEN}
+      DOMAIN: ${DOMAIN}
+      SMTP_HOST: ${SMTP_HOST}
+      SMTP_PORT: ${SMTP_PORT}
+      SMTP_SECURITY: "off"
+      SMTP_FROM: ${SMTP_FROM}
+      SMTP_USERNAME: ${SMTP_USERNAME}
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
+      INSTALLATION_ID: ${INSTALLATION_ID}
+      INSTALLATION_KEY: ${INSTALLATION_KEY}
+      YUBICO_CLIENT_ID: ${YUBICO_CLIENT_ID}
+      YUBICO_SECRET_KEY: ${YUBICO_SECRET_KEY}
+      SIGNUPS_ALLOWED: "true"
+    volumes:
+      - /volume2/docker/vaultwarden/volumes/data:/data:rw
+    ports:
+      - 10001:80
+    networks:
+      - prod_network
+
+networks:
+  prod_network:
+    external: true
+      
